Update to Spring Boot 3.1.4, Java 21